2016-03-22  Luigi Scarso <luigi.scarso@gmail.com>

	mflua.c: return if a lua file is not found. 

2015-09-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mflua.am: Fix dependencies.

2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mfluatraptest (removed): Renamed ...
	* mfluatraptest.test (new):  ... into this.
	* am/mflua.am: Better dependencies for 'make check'.

2015-07-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mflua.am: Fix dependencies.

2015-07-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mflua.am, mfluac.[ch]: Use lkpselib.c.

2015-07-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mflua.am: Always create mflua-nowin, either as extra
	program or as symlink.

2015-07-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mfluatraptest: Directly use mfluatrap/*.lua files.

2015-07-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* mflua.c: Use kpse_find_file() to locate .lua files.

2015-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mflua.am: Use $(tie_c) and $(tie_m).

2015-04-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Imported MFLua into TeX Live, based on the SVN repository
	  https://foundry.supelec.fr/projects/mflua
	  from Luigi Scarso <luigi.scarso@gmail.com>.