@@ -1,6 +1,7 @@
 ## texk/web2c/mfluajitdir/am/mfluajit.am: Makefile fragment for MFLuaJIT.
 ##
-## Copyright (C) 2015 Peter Breitenlohner <tex-live@tug.org>
+## Copyright 2016 Karl Berry <tex-live@tug.org>
+## Copyright 2015 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 
 ## MFLuaJIT
@@ -18,7 +19,6 @@ else !WIN32
 if !MFLUAJITN
 bin_links += mfluajit$(EXEEXT):mfluajit-nowin
 endif !MFLUAJITN
-bin_links += mfluajit$(EXEEXT):inimfluajit
 endif !WIN32
 endif MFLUAJIT
 EXTRA_PROGRAMS += mfluajit mfluajit-nowin
@@ -34,12 +34,10 @@ install-mfluajit-links: call_mfluajit$(EXEEXT)
 if !MFLUAJITN
 	$(INSTALL_PROGRAM) call_mfluajit$(EXEEXT) $(DESTDIR)$(bindir)/mfluajit-nowin$(EXEEXT)
 endif !MFLUAJITN
-	$(INSTALL_PROGRAM) call_mfluajit$(EXEEXT) $(DESTDIR)$(bindir)/inimfluajit$(EXEEXT)
 uninstall-mfluajit-links:
 if !MFLUAJITN
 	rm -f $(DESTDIR)$(bindir)/mfluajit-nowin$(EXEEXT)
 endif !MFLUAJITN
-	rm -f $(DESTDIR)$(bindir)/inimfluajit$(EXEEXT)
 endif WIN32
 
 dist_mfluajit_SOURCES = mfluajitdir/mfluajitextra.c mfluajitdir/mfluajitextra.h mfluadir/mflua_version.h
