@@ -1,3 +1,7 @@
+2016-04-05  Karl Berry  <karl@tug.org>
+
+	* am/mflua.am: no need for inimfluajit.
+
 2015-09-27  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* am/mfluajit.am: Fix dependencies.
